# go-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  build-and-deploy.sh  build-and-install.sh  build.sh  deploy.sh  go-main.Dockerfile  install.sh  rust-main.rs  setup-infra.sh  uninstall.sh
apps/external-api/: pom.xml
apps/external-api/.run/: ExternalApiApplication.run.xml
apps/fileserver-api/: pom.xml
apps/fileserver-api/.run/: FileserverApiApplication.run.xml
apps/fileserver-ui/: package-lock.json  package.json
apps/fileserver-ui/src/: App.js
apps/go-main/: go.mod  main.go
apps/kill-job/: kill-job.Dockerfile
apps/rust-main/: rust-main.Dockerfile
apps/rust-main/src/: main.rs
apps/service-discoverer/: Cargo.toml  service-discoverer.Dockerfile
external-api/: pom.xml
go-main/: go-main.Dockerfile  main.go
infrastructure/apps/go-main/: Chart.yaml  values.yaml
infrastructure/apps/go-main/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infrastructure/apps/kill-job/: Chart.yaml  values.yaml
infrastructure/apps/prometheus/: values.yaml
infrastructure/apps/rust-main/: Chart.yaml  values.yaml
infrastructure/apps/service-discoverer/: Chart.yaml  values.yaml
infrastructure/infra/kafka/: Chart.yaml  values.yaml
kill-job/: kill-job.Dockerfile  main.go
rust-main/: .gitignore  Cargo.toml  rust-main.Dockerfile
rust-main/src/: main.rs
service-discoverer/: Cargo.toml  service-discoverer.Dockerfile
service-discoverer/src/: main.rs
(+29 files in other folders)
