[package]
name = "service-discoverer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service-discoverer"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
once_cell = "1.19.0"
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
tokio = "1.35.0"
serde = "1.0.193"
